force-app/main/default/objects/DevOps_Commit__c/DevOps_Commit__c.object-meta.xml
<CustomObject>
    <description>One Git commit, linked to a User Story by branch parse.</description>
    <label>DevOps Commit</label>
    <nameField>
        <label>Commit Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <pluralLabel>DevOps Commits</pluralLabel>
</CustomObject>