force-app/main/default/objects/DevOps_Commit__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>