force-app/main/default/objects/DevOps_Commit__c/fields/Commit_SHA__c.field-meta.xml
<CustomField>
    <fullName>Commit_SHA__c</fullName>
    <externalId>true</externalId>
    <unique>true</unique>
    <caseSensitive>true</caseSensitive>
    <label>Commit SHA</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>