force-app/main/default/objects/DevOps_Commit__c/fields/Commit_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Commit_Timestamp__c</fullName>
    <label>Commit Timestamp</label>
    <type>DateTime</type>
</CustomField>