force-app/main/default/objects/DevOps_Commit__c/fields/Files_Changed__c.field-meta.xml
<CustomField>
    <fullName>Files_Changed__c</fullName>
    <label>Files Changed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>