force-app/main/default/objects/DevOps_Commit__c/fields/Git_URL__c.field-meta.xml
<CustomField>
    <fullName>Git_URL__c</fullName>
    <label>Git URL</label>
    <type>Url</type>
</CustomField>